--- a/server/src/main/resources/templates/home_train.html
+++ b/server/src/main/resources/templates/home_train.html
@@ -111,5 +111,7 @@
 
         <script th:src="@{/js/home_train.js}"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
     </body>
 </html>
