[add] logic client + websocket

--- a/server/src/main/resources/templates/home_done.html
+++ b/server/src/main/resources/templates/home_done.html
@@ -18,8 +18,9 @@
                             <div class="dropdown-arrow"></div> <!-- Arrow element -->
                             <div class="dropdown-item" onclick="sortBy('accuracy')">Accuracy</div>
                             <div class="dropdown-item" onclick="sortBy('loss')">Loss</div>
-                            <div class="dropdown-item" onclick="sortBy('epoch')">Epoch</div>
-                            <div class="dropdown-item" onclick="sortBy('startTime')">Start Time</div>
+                            <div class="dropdown-item" onclick="sortBy('f1Score')">F1 score</div>
+                            <div class="dropdown-item" onclick="sortBy('startTime')">Started Time</div>
+                            <div class="dropdown-item" onclick="sortBy('endTime')">Ended Time</div>
                             <div class="dropdown-item" onclick="sortBy('duration')">Duration</div>
                         </div>
                     </div>
