--- a/server/src/main/resources/static/css/login.css
+++ b/server/src/main/resources/static/css/login.css
@@ -52,6 +52,10 @@ body {
     border-color: orange !important;
 }
 
+.form-control {
+    font-size: 14px;
+}
+
 .error-message {
     color: red;
     background: none;
