--- a/server/src/main/resources/templates/login.html
+++ b/server/src/main/resources/templates/login.html
@@ -14,11 +14,11 @@
     <form id="loginForm" onsubmit="return sendLogin(event)">
         <div class="form-group mb-3">
             <label class="text-white">Username</label>
-            <input type="text" name="username" class="form-control form-control-lg" required>
+            <input type="text" name="username" class="form-control form-control-lg" required placeholder="username">
         </div>
         <div class="form-group mb-3">
             <label class="text-white">Password</label>
-            <input type="password" name="password" class="form-control form-control-lg" required>
+            <input type="password" name="password" class="form-control form-control-lg" required placeholder="password">
 
             <div id="errorMessage" class="error-message d-none animate__animated animate__shakeX">
                 Invalid username or password
