--- a/server/src/main/resources/templates/home_train.html
+++ b/server/src/main/resources/templates/home_train.html
@@ -16,9 +16,9 @@
                         <button id="sortToggleButton" class="btn btn-orange_type btn-sm" onclick="toggleSortDropdown()">Sort</button>
                         <div id="sortDropdown" class="sort-dropdown d-none">
                             <div class="dropdown-arrow"></div> <!-- Arrow element -->
-                            <div class="dropdown-item" onclick="sortBy('accuracy')">Accuracy</div>
-                            <div class="dropdown-item" onclick="sortBy('loss')">Loss</div>
-                            <div class="dropdown-item" onclick="sortBy('epoch')">Total epoch</div>
+                            <div class="dropdown-item" onclick="sortBy('currentAccuracy')">Accuracy</div>
+                            <div class="dropdown-item" onclick="sortBy('currentLoss')">Loss</div>
+                            <div class="dropdown-item" onclick="sortBy('totalEpoch')">Total epoch</div>
                             <div class="dropdown-item" onclick="sortBy('startTime')">Start Time</div>
                             <div class="dropdown-item" onclick="sortBy('progress')">Progress</div>
                         </div>
