--- a/server/src/main/resources/templates/home_train.html
+++ b/server/src/main/resources/templates/home_train.html
@@ -16,11 +16,11 @@
                         <button id="sortToggleButton" class="btn btn-orange_type btn-sm" onclick="toggleSortDropdown()">Sort</button>
                         <div id="sortDropdown" class="sort-dropdown d-none">
                             <div class="dropdown-arrow"></div> <!-- Arrow element -->
-                            <div class="dropdown-item" onclick="sortBy('currentAccuracy')">Accuracy</div>
-                            <div class="dropdown-item" onclick="sortBy('currentLoss')">Loss</div>
-                            <div class="dropdown-item" onclick="sortBy('totalEpoch')">Total epoch</div>
-                            <div class="dropdown-item" onclick="sortBy('startTime')">Start Time</div>
-                            <div class="dropdown-item" onclick="sortBy('progress')">Progress</div>
+                            <div class="dropdown-item" onclick="sortBy('currentAccuracy', 'Accuracy')">Accuracy</div>
+                            <div class="dropdown-item" onclick="sortBy('currentLoss', 'Loss')">Loss</div>
+                            <div class="dropdown-item" onclick="sortBy('totalEpoch', 'Total epoch')">Total epoch</div>
+                            <div class="dropdown-item" onclick="sortBy('startTime', 'Start Time')">Start Time</div>
+                            <div class="dropdown-item" onclick="sortBy('progress', 'Progress')">Progress</div>
                         </div>
                     </div>
                     <div class="dropdown-custom2 position-relative">
