--- a/server/src/main/resources/static/css/home_train.css
+++ b/server/src/main/resources/static/css/home_train.css
@@ -58,7 +58,11 @@ body::-webkit-scrollbar {
     color: white;
     font-weight: 700;
     font-size: 16px;
-    text-shadow: 0 0 2px #fff;
+    text-shadow:
+        -1px -1px 0 gray,
+         1px -1px 0 gray,
+        -1px  1px 0 gray,
+         1px  1px 0 gray;
 }
 
 .job-description span {
